k8s/base/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: gaming-store
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 80
